2003-07-23  Carl Worth  <cworth@isi.edu>

	* src/cairoint.h: Introduced some cairo_fixed_*_t types. This is
	the first baby step toward ripping X dependencies out of the Cairo
	headers.

	* src/cairo_traps.c (_compute_x): Converted from floating point to
	fixed point.
	(_line_seg_intersection_ceil): Now increments y value once if the
	initial y value computed is less than the actual intersection
	point.

	* src/cairo_traps.c (_compare_cairo_edge_by_slope): Converted from
	floating point to fixed point.

	* src/cairo_pen.c (_slope_clockwise): Converted from floating
	point to fixed point.

2003-07-19  Carl Worth  <cworth@isi.edu>

	* src/cairo_traps.c (cairo_traps_tessellate_polygon): Fixed some
	sorting problems with two intersections very near the same
	vertical position. (There are still some reamining problems
	though).
	(cairo_traps_tessellate_polygon): Better fix for the same
	bug. Should cover all cases, (and it's moe efficient too).

2003-07-18  Carl Worth  <cworth@east.isi.edu>

	* src/cairo.h: Fixed some inconsistent tag/typedef names that were
	missed in the great renaming.

2003-07-18  Carl Worth  <cworth@isi.edu>

	* src/cairo.h: Renamed everything from Xr* to cairo_*.

	* util/xr2cairo: Added utility script xr2cairo to help users fix
	their source code.

2003-07-03  Carl Worth  <cworth@isi.edu>

	* src/xrmatrix.c (XrMatrixGetAffine): Added XrMatrixGetAffine
	(from Soorya Kuloor)

	* src/xr.c (XrGetAlpha): Added XrGetAlpha
	(XrGetRGBColor): Added XrGetRGBColor

2003-06-12  Carl Worth  <cworth@isi.edu>

	* src/xrgstate.c (_XrGStateScale): Scale by 0 now causes an
	InvalidMatrix error.

2003-05-28  Carl Worth  <cworth@isi.edu>

	* src/xrmatrix.c (XrMatrixMultiply): Eliminated
	_XrMatrixMultiplyIntoRight and _XrMatrixMultiplyIntoLeft.

	* src/xrgstate.c (_XrGStateClipAndCompositeTrapezoids): Fixed
	missing translation of clip surface.

	* src/Xr.h: Added XrSurfacePutImage

2003-05-16  Carl Worth  <cworth@isi.edu>
